frontend/test/should_pass/map_identical_assignment.grg
using map_model_001;

rule assi {
	a:A;
	
	modify {
		eval {
			a.niceMap = a.niceMap;
			a.spiceMap = a.spiceMap;
			a.shiceMap = a.shiceMap;
		}
	}
}
