frontend/test/should_fail/map_006.grg
using map_model_001;

rule constAssignment {
	a:A;
	
	modify {
		eval {
			a.conststringToInt = a.stringToInt;
		}
	}
}